Fix for ClientCard not showing

--- a/src/components/sections/ClientCard/Offers/Offers.module.scss
+++ b/src/components/sections/ClientCard/Offers/Offers.module.scss
@@ -44,7 +44,7 @@
 .couponCode {
   display: inline-block;
   background: var(--fs-color-neutral-bkg);
-  padding: var(--fs-spacing-0) var(--fs-spacing-2);
+  // padding: var(--fs-spacing-0) var(--fs-spacing-2);
   border-radius: var(--fs-border-radius);
   font-family: var(--fs-text-face-body);
   font-weight: var(--fs-text-weight-bold);
